--- a/packages/httl-vscode/package.json
+++ b/packages/httl-vscode/package.json
@@ -9,7 +9,7 @@
 	"bugs": {
 		"url": "https://github.com/httl-lang/httl-vscode/issues"
 	},
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"publisher": "HTTL",
 	"author": {
 		"name": "Evgen Mykhailenko"
@@ -87,7 +87,7 @@
 			"httlMainPanel": [
 				{
 					"id": "httlMainView",
-					"name": "HTTL Web View",
+					"name": "MAIN",
 					"type": "webview"
 				}
 			],
