Enhance quick run functionality: add keyboard shortcuts, improve resizing behavior, and update README for clarity

--- a/packages/httl-vscode/package.json
+++ b/packages/httl-vscode/package.json
@@ -116,6 +116,11 @@
 			{
 				"command": "httl.run",
 				"key": "f5",
+				"when": "editorTextFocus && editorLangId == 'httl'"
+			},
+			{
+				"command": "httl.run",
+				"key": "ctrl+enter",
 				"mac": "cmd+enter",
 				"when": "editorTextFocus && editorLangId == 'httl'"
 			}
