--- a/packages/httl-vscode/package.json
+++ b/packages/httl-vscode/package.json
@@ -179,6 +179,7 @@
 		"crypto-browserify": "^3.12.1",
 		"form-data": "^4.0.1",
 		"httl-core": "^0.1.0",
+		"httl-lsp": "^0.1.0",
 		"js-yaml": "^4.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"monaco-editor": "^0.52.2",
