--- a/packages/httl-website/package.json
+++ b/packages/httl-website/package.json
@@ -30,6 +30,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
+    "webpack-bundle-analyzer": "^4.10.2",
     "worker-loader": "^3.0.8"
   }
 }
