--- a/packages/httl-website/package.json
+++ b/packages/httl-website/package.json
@@ -10,17 +10,22 @@
   },
   "dependencies": {
     "@codingame/monaco-vscode-configuration-service-override": "^11.1.2",
+    "@codingame/monaco-vscode-html-default-extension": "^11.1.2",
+    "@codingame/monaco-vscode-json-default-extension": "^11.1.2",
     "@codingame/monaco-vscode-keybindings-service-override": "^11.1.2",
     "@codingame/monaco-vscode-languages-service-override": "^11.1.2",
     "@codingame/monaco-vscode-textmate-service-override": "^11.1.2",
     "@codingame/monaco-vscode-theme-defaults-default-extension": "^11.1.2",
     "@codingame/monaco-vscode-theme-service-override": "^11.1.2",
+    "@codingame/monaco-vscode-xml-default-extension": "^11.1.2",
+    "@codingame/monaco-vscode-yaml-default-extension": "^11.1.2",
     "httl-lsp": "^0.1.0",
     "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@^11.1.2",
     "monaco-languageclient": "^9.1.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "styled-components": "^6.1.14",
     "vscode": "npm:@codingame/monaco-vscode-api@^11.1.2"
   },
   "devDependencies": {
@@ -28,10 +33,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/vscode": "^1.96.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "webpack-bundle-analyzer": "^4.10.2",
-    "worker-loader": "^3.0.8"
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
