--- a/packages/httl-website/tsconfig.json
+++ b/packages/httl-website/tsconfig.json
@@ -23,6 +23,6 @@
       "@root/*": ["../../node_modules/*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/editor/____editor.old"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
