--- a/packages/httl-website/package.json
+++ b/packages/httl-website/package.json
@@ -19,6 +19,8 @@
     "@codingame/monaco-vscode-theme-service-override": "^11.1.2",
     "@codingame/monaco-vscode-xml-default-extension": "^11.1.2",
     "@codingame/monaco-vscode-yaml-default-extension": "^11.1.2",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "httl-lsp": "^0.1.0",
     "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@^11.1.2",
     "monaco-languageclient": "^9.1.0",
@@ -33,6 +35,9 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/vscode": "^1.96.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5",
     "webpack-bundle-analyzer": "^4.10.2"
   }
