--- a/packages/httl-website/package.json
+++ b/packages/httl-website/package.json
@@ -25,6 +25,8 @@
     "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@^11.1.2",
     "monaco-languageclient": "^9.1.0",
     "next": "15.1.4",
+    "nextra": "^4.0.5",
+    "nextra-theme-docs": "^4.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reconnecting-websocket": "^4.4.0",
@@ -32,14 +34,18 @@
     "vscode": "npm:@codingame/monaco-vscode-api@^11.1.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/vscode": "^1.96.0",
-    "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5",
-    "webpack-bundle-analyzer": "^4.10.2"
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5"
+  },
+  "postcss": {
+    "plugins": {
+      "@tailwindcss/postcss": {}
+    }
   }
 }
