--- a/packages/httl-website/tsconfig.json
+++ b/packages/httl-website/tsconfig.json
@@ -35,8 +35,9 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-, "next.config.mjs"  ],
+    ".next/types/**/*.ts",
+    "next.config.mjs"
+  ],
   "exclude": [
     "node_modules"
   ]
