Refactor HTTL CLI and core: update package.json, add CLI functionality, and configure Webpack

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "httl",
   "version": "0.1.0",
-  "scripts": {
-  },
+  "scripts": {},
   "author": "Evgen Mykhailenko",
   "license": "ISC",
   "description": "",
