--- a/packages/httl-cli/package.json
+++ b/packages/httl-cli/package.json
@@ -1,22 +1,32 @@
 {
   "name": "httl-cli",
-  "version": "0.1.0",
+  "version": "0.1.7",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "source": "src/index.ts",
+  "bin": {
+    "get": "dist/index.js"
+  },
   "scripts": {
-    "build": "tsc --build",
-    "rebuild": "rm ./tsconfig.tsbuildinfo && rm -rf dist && tsc --build",
+    "dev": "node dist/index.js",
+    "build": "webpack --mode production",
     "test": "jest",
-    "tsc-watch": "tsc --watch"
+    "tsc-watch": "webpack --watch"
   },
   "author": "Evgen Mykhailenko",
   "license": "HTTL License",
   "description": "HTTL CLI",
-  "dependencies": {},
   "devDependencies": {
-    "@types/ws": "^8.5.13",
+    "@types/node": "^22.13.1",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-node-externals": "^3.0.0"
+  },
+  "dependencies": {
+    "commander": "^13.1.0",
+    "httl-core": "^0.1.0"
   }
 }
