--- a/packages/httl-cli/tsconfig.json
+++ b/packages/httl-cli/tsconfig.json
@@ -4,8 +4,8 @@
       "node",
       "jest"
     ],
-    "module": "ESNext",
-    "target": "ESNext",
+    "module": "CommonJS",
+    "target": "ES5",
     "rootDir": "./src",
     "outDir": "./dist",
     "declaration": true,
@@ -14,6 +14,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
+    "inlineSources": true,
     "incremental": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": false,
