Implement HTTL CLI commands and YAML support; add Run and Request commands, update package.json, and enhance README

--- a/packages/httl-cli/.vscode/tasks.json
+++ b/packages/httl-cli/.vscode/tasks.json
@@ -6,13 +6,11 @@
       "script": "tsc-watch",
       "group": "build",
       "label": "tsc: watch",
-      "problemMatcher": [
-        "$tsc-watch"
-      ],
+      "problemMatcher": "$ts-webpack-watch",
       "runOptions": {
         "runOn": "folderOpen"
       },
-      "isBackground": true
-    },
+      "isBackground": true,
+    }
   ]
 }
