--- a/packages/httl-core/package.json
+++ b/packages/httl-core/package.json
@@ -20,7 +20,8 @@
     "antlr4": "^4.13.2",
     "dotenv": "^16.4.7",
     "form-data": "^4.0.1",
-    "oxide.ts": "^1.1.0"
+    "oxide.ts": "^1.1.0",
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.13",
