--- a/packages/httl-cli/package.json
+++ b/packages/httl-cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "httl",
-  "version": "0.1.7",
+  "name": "httl-cli",
+  "version": "0.1.8",
   "author": "Evgen Mykhailenko",
   "license": "HTTL License",
   "description": "HTTL Command Line Interface",
@@ -39,10 +39,13 @@
     "build-dev": "webpack --mode development",
     "build": "webpack --mode production",
     "test": "jest",
-    "tsc-watch": "webpack --mode development --watch --profile --progress"
+    "tsc-watch": "webpack --mode development --watch --profile --progress",
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
+    "httl-core": "^0.1.0",
     "@types/node": "^22.13.1",
+    "terser-webpack-plugin": "^5.3.11",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
@@ -53,7 +56,6 @@
   "dependencies": {
     "chalk": "^5.4.1",
     "cli-spinners": "^3.2.0",
-    "httl-core": "^0.1.0",
     "ora": "^8.2.0"
   },
   "engines": {
