--- a/packages/httl-vscode/package.json
+++ b/packages/httl-vscode/package.json
@@ -9,7 +9,7 @@
 	"bugs": {
 		"url": "https://github.com/httl-lang/httl/issues"
 	},
-	"version": "0.1.5",
+	"version": "0.1.7",
 	"publisher": "HTTL",
 	"author": {
 		"name": "Evgen Mykhailenko"
@@ -186,6 +186,7 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.4.0",
+		"react-markdown": "^9.0.3",
 		"react-router": "^7.1.1",
 		"react-storm": "^0.5.1",
 		"react-top-loading-bar": "^2.3.1",
