--- a/packages/httl-cli/package.json
+++ b/packages/httl-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "httl-cli",
-  "version": "0.1.8",
+  "version": "0.1.10",
   "author": "Evgen Mykhailenko",
   "license": "HTTL License",
   "description": "HTTL Command Line Interface",
@@ -32,7 +32,7 @@
   ],
   "main": "dist/index.js",
   "bin": {
-    "httl": "dist/index.js"
+    "httl": "bin/index.js"
   },
   "scripts": {
     "dev": "node dist/index.js",
@@ -43,8 +43,9 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "httl-core": "^0.1.0",
     "@types/node": "^22.13.1",
+    "httl-common": "^0.1.0",
+    "httl-core": "^0.1.0",
     "terser-webpack-plugin": "^5.3.11",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.1",
@@ -55,10 +56,9 @@
   },
   "dependencies": {
     "chalk": "^5.4.1",
-    "cli-spinners": "^3.2.0",
     "ora": "^8.2.0"
   },
   "engines": {
-    "node": ">= 16.14"
+    "node": ">= 18"
   }
 }
