Add HttlUrl class and related tests; update error handling in CLI commands

--- a/packages/httl-core/tsconfig.json
+++ b/packages/httl-core/tsconfig.json
@@ -23,10 +23,13 @@
     "esModuleInterop": true,
     "composite": true,
     "allowJs": true,
+    "resolveJsonModule": true,
     // "strict": true //TODO
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "src/**/*.json"
+
   ],
   "exclude": [
     "dist"
