--- a/packages/httl-vscode/package.json
+++ b/packages/httl-vscode/package.json
@@ -139,6 +139,7 @@
 		"vscode:prepublish": "npm run package",
 		"compile": "webpack",
 		"watch": "webpack --watch",
+		"build-dev": "webpack --mode development",
 		"package": "webpack --mode production --devtool hidden-source-map",
 		"compile-tests": "tsc -p . --outDir out",
 		"watch-tests": "tsc -p . -w --outDir out",
@@ -172,6 +173,7 @@
 		"style-loader": "^4.0.0",
 		"ts-loader": "^9.5.1",
 		"typescript": "^5.4.5",
+		"vm-browserify": "^1.1.2",
 		"webpack": "^5.92.1",
 		"webpack-cli": "^5.1.4"
 	},
