Add Runtimer feature with routing, state management, and file content tool

--- a/packages/httl-vscode/tsconfig.json
+++ b/packages/httl-vscode/tsconfig.json
@@ -9,6 +9,8 @@
 		"sourceMap": true,
 		"resolveJsonModule": true,
 		"jsx": "react-jsx",
+		"module": "Node16",
+		"target": "ES2022",
 		"lib": [
 			"webworker",
 			"dom",
