--- a/packages/httl-vscode/package.json
+++ b/packages/httl-vscode/package.json
@@ -157,7 +157,7 @@
 		"@types/react-dom": "^18.3.5",
 		"@types/styled-components": "^5.1.34",
 		"@types/use-sync-external-store": "^0.0.6",
-		"@types/vscode": "^1.92.0",
+		"@types/vscode": "^1.97.0",
 		"@typescript-eslint/eslint-plugin": "^7.14.1",
 		"@typescript-eslint/parser": "^7.11.0",
 		"@vscode/test-cli": "^0.0.9",
@@ -180,6 +180,7 @@
 	"dependencies": {
 		"crypto-browserify": "^3.12.1",
 		"form-data": "^4.0.1",
+		"glob": "^11.0.1",
 		"httl-core": "^0.1.0",
 		"httl-lsp": "^0.1.0",
 		"js-yaml": "^4.1.0",
