--- a/packages/httl-vscode/package.json
+++ b/packages/httl-vscode/package.json
@@ -181,6 +181,7 @@
 		"crypto-browserify": "^3.12.1",
 		"form-data": "^4.0.1",
 		"glob": "^11.0.1",
+		"httl-common": "^0.1.0",
 		"httl-core": "^0.1.0",
 		"httl-lsp": "^0.1.0",
 		"js-yaml": "^4.1.0",
