--- a/packages/httl-vscode/package.json
+++ b/packages/httl-vscode/package.json
@@ -175,6 +175,7 @@
 		"typescript": "^5.4.5",
 		"vm-browserify": "^1.1.2",
 		"webpack": "^5.92.1",
+		"webpack-bundle-analyzer": "^4.10.2",
 		"webpack-cli": "^5.1.4"
 	},
 	"dependencies": {
