Update license from HTTL License to MIT License across all relevant files and remove unused mock server files

--- a/packages/httl-cli/package.json
+++ b/packages/httl-cli/package.json
@@ -2,7 +2,7 @@
   "name": "httl-cli",
   "version": "0.1.11",
   "author": "Evgen Mykhailenko",
-  "license": "HTTL License",
+  "license": "MIT License",
   "description": "HTTL Command Line Interface",
   "homepage": "https://httl.dev",
   "repository": {
