--- a/packages/httl-vscode/package.json
+++ b/packages/httl-vscode/package.json
@@ -9,7 +9,7 @@
 	"bugs": {
 		"url": "https://github.com/httl-lang/httl/issues"
 	},
-	"version": "0.2.1",
+	"version": "0.2.2",
 	"publisher": "HTTL",
 	"author": {
 		"name": "Evgen Mykhailenko"
@@ -37,7 +37,10 @@
 		"response",
 		"api-client",
 		"rest-client",
-		"jwt"
+		"jwt",
+		"openapi",
+		"swagger",
+		"json"
 	],
 	"activationEvents": [
 		"onLanguage:plaintext",
@@ -193,7 +196,7 @@
 		"react-icons": "^5.4.0",
 		"react-markdown": "^9.0.3",
 		"react-router": "^7.1.1",
-		"react-storm": "^0.5.1",
+		"react-storm": "^0.5.2",
 		"react-top-loading-bar": "^3.0.2",
 		"stream-browserify": "^3.0.0",
 		"styled-components": "^6.1.13",
